# wrapper_geocode_reverse

./: .coverage  .env.default  .env.txt  .gitignore  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml  main.yml
migrations/: env.py
migrations/versions/: 3374884693cb_create_table_location.py  341e376e911f_create_table_location.py  37a948b577ab_create_location_table.py  6b81f461eab6_create_location_table.py  709603d931e2_create_location_table.py  793fb95af042_create_location_table.py  910d98322a13_create_location_table.py
tests/: conftest.py  test_app.py
tests/src/core/cache/: simple_cache_test.py
tests/src/core/tables/: location_table_test.py
tests/src/location/controller/: location_controller.py
tests/src/location/routers/: location_router_test.py
tests/src/location/service/: location_service_test.py
tests/src/location/services/: location_service_test.py
tests/src/location/tables/: location_table_test.py
tests/src/tables/: location_table_test.py
tests/src/utils/data/: fake_data.py
wrapper_geocode_reverse/: app.py
wrapper_geocode_reverse/src/core/: __init__.py
wrapper_geocode_reverse/src/core/cache/: __init__.py  simple_cache.py
wrapper_geocode_reverse/src/core/client/: client_http.py
wrapper_geocode_reverse/src/core/engine/: engine.py
wrapper_geocode_reverse/src/core/logger/: logger.py
wrapper_geocode_reverse/src/location/: __init__.py
wrapper_geocode_reverse/src/routers/: router.py
wrapper_geocode_reverse/src/tables/: location_table.py
(+11 files in other folders)
