[tool.poetry]
name = "wrapper-geocode-reverse"
version = "0.1.0"
description = ""
authors = ["Robert Ferreira <robertsilva-ferreira@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.3"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.30"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
geoalchemy2 = "^0.15.1"
alembic = "^1.13.1"
requests = "^2.32.3"
pydantic-extra-types = "^2.9.0"
psycopg = {extras = ["binary"], version = "^3.2.1"}


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
taskipy = "^1.12.2"
ruff = "^0.4.3"
httpx = "^0.27.0"
respx = "^0.21.1"
pytest-asyncio = "^0.23.7"
testcontainers = "^4.8.1"

[tool.ruff]
line-length = 79
extend-exclude = [
    'migrations', 
    'base_project',
    'tests/src/utils/data/'
]

[tool.ruff.lint]
preview = true
select = ['I','F','E','W','PL','PT']

[tool.ruff.lint.pylint]
max-args = 10

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.taskipy.tasks]
lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'
run = 'fastapi run wrapper_geocode_reverse/app.py --port=8080'
run_dev = 'fastapi dev wrapper_geocode_reverse/app.py --port=9000'
pre_test = 'task lint'
test = 'pytest -s -x --cov=wrapper_geocode_reverse -vv'
post_test = 'coverage html'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
